--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,12 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
-    "laravel/framework": "^5.5"
+    "php": ">=7.2",
+    "laravel/framework": "^6.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.0",
-    "codeclimate/php-test-reporter": "dev-master",
-    "orchestra/testbench": "^3.1"
+    "phpunit/phpunit": "^8.0",
+    "orchestra/testbench": "^4.0"
   },
   "autoload": {
     "psr-4": {
