--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "krgupta/active",
-  "description": "The helper class for Laravel 6 applications to get active class base on current route",
+  "description": "The helper class for Laravel (4/5) applications to get active class base on current route",
   "keywords": [
     "laravel",
     "active",
@@ -16,12 +16,13 @@
     }
   ],
   "require": {
-    "php": ">=7.2",
-    "laravel/framework": "^6.0"
+    "php": ">=7.0",
+    "laravel/framework": "^5.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0",
-    "orchestra/testbench": "^4.0"
+    "phpunit/phpunit": "~6.0",
+    "codeclimate/php-test-reporter": "dev-master",
+    "orchestra/testbench": "^3.1"
   },
   "autoload": {
     "psr-4": {
@@ -33,15 +34,5 @@
     ]
   },
   "minimum-stability": "dev",
-  "prefer-stable": true,
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Krgupta\\Active\\Providers\\ActiveServiceProvider"
-      ],
-      "aliases": {
-        "Active": "Krgupta\\Active\\Facades\\Active"
-      }
-    }
-  }
+  "prefer-stable": true
 }
