--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,36 @@
 {
-  "name": "krgupta/active",
-  "description": "The helper class for Laravel 6 applications to get active class base on current route",
-  "keywords": [
-    "laravel",
-    "active",
-    "routing"
-  ],
-  "license": "MIT",
-  "homepage": "",
-  "authors": [
-    {
-      "name": "Kamlesh Gupta",
-      "email": "webworldgk@gmail.com",
-      "homepage": ""
-    }
-  ],
-  "require": {
-    "php": ">=7.2",
-    "laravel/framework": "^6.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^8.0",
-    "orchestra/testbench": "^4.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Krgupta\\Active\\": "src/",
-      "Krgupta\\ActiveTest\\": "tests/"
-    },
-    "files": [
-      "src/Helpers/helpers.php"
-    ]
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Krgupta\\Active\\Providers\\ActiveServiceProvider"
-      ],
-      "aliases": {
-        "Active": "Krgupta\\Active\\Facades\\Active"
+    "name": "krgupta/active",
+    "description": "The helper class for Laravel 4 applications to get active class base on current route",
+    "keywords": [
+      "laravel",
+      "active",
+      "routing"
+    ],
+    "license": "MIT",
+    "homepage": "",
+    "authors": [
+      {
+        "name": "Kamlesh Gupta",
+        "email": "webworldgk@gmail.com",
+        "homepage": ""
       }
-    }
-  }
+    ],
+    "require": {
+		"php": ">=5.4.0",
+		"illuminate/http": "~5.0",
+		"illuminate/routing": "~5.0",
+		"illuminate/support": "~5.0"
+    },
+    "require-dev": {
+		"phpunit/phpunit": "~4.0",
+		"mockery/mockery": "dev-master",
+        "codeclimate/php-test-reporter": "dev-master"
+    },
+    "autoload": {
+		"psr-4": {
+			"Krgupta\\Active\\": "src/"
+		}
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
